@@ -1,3 +1,7 @@
+2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/PersonStore.cs: Added a GetPerson with a ProviderUser
+
 2007-05-11  Brady Anderson <banderso@novell.com> 
 
 	* Banter/Application.cs: removed tapioca connection
